--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ body
 
 img
 {
-    padding-left: 100px;
+    padding-left: 50px;
 }
 
 img:hover
